Edited wiki page through web user interface.

--- a/wiki/Problems_with_Ubuntu.wiki
+++ b/wiki/Problems_with_Ubuntu.wiki
@@ -4,3 +4,7 @@
 = Festival Can’t Open /dev/dsp =
 
 See http://aanugraha.wordpress.com/2008/12/20/festival-cant-open-devdsp/
+
+= ddms error: "wrong ELF class: ELFCLASS32 (Possible cause: architecture word width mismatch)" =
+
+See http://www.mail-archive.com/android-beginners@googlegroups.com/msg08985.html
