Edited wiki page through web user interface.

--- a/wiki/Problems_with_Ubuntu.wiki
+++ b/wiki/Problems_with_Ubuntu.wiki
@@ -8,3 +8,7 @@ See http://aanugraha.wordpress.com/2008/12/20/festival-cant-open-devdsp/
 = ddms error: "wrong ELF class: ELFCLASS32 (Possible cause: architecture word width mismatch)" =
 
 See http://www.mail-archive.com/android-beginners@googlegroups.com/msg08985.html
+
+Can't find connected device with adb or launch to device with Eclipse
+
+See http://groups.google.com/group/android-beginners/browse_thread/thread/d40c55375c674138
