--- a/wiki/ProblemsWithADP1.wiki
+++ b/wiki/ProblemsWithADP1.wiki
@@ -12,6 +12,8 @@ Reference: http://groups.google.com/group/android-developers/browse_thread/threa
 
 I've found that the USB ports in the back of my computer are more reliable than the front ports.  When I was using the front ports, often Eclipse was not able to detect the phone to deploy an application, and often Gnome/Nautilus was not able to mount the SD card.  There have been no such issues since I switched to the back ports.
 
-= HTC device will not prompt with "USB connected message" and be absent from "lsusb" and "./adb devices" =
+= HTC device will not prompt with "USB connected message" and/or be absent from "lsusb" and "./adb devices" =
 
-When this happens, it seems to fail independently of which computer it is plugged into or which operating system.  It seems that insufficient speed at which the cable is inserted into the phone can cause it to fail.  My solution has been to insert the cable quickly and firmly into the port.  Maybe new debounce routines were added in the Android 1.5 firmware?
+When this happens, it seems to fail independently of which computer it is plugged into or which operating system.  The tether connection to the phone itself seems unreliable.  My temporary solution has been to insert the plug into the phone's bottom jack with upward pressure (i.e. - in the direction that the screen faces), and keep that pressure applied by setting the phone such that the cable rests on a surface higher than the phone.
+
+Symptoms of this issue are mysterious absence of "" from the list of "lsusb" devices.  It may appear for a short time when initially connected, but be absent when attempted later.
