--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -26,5 +26,11 @@
     <string name="summary_list_preference">An example that uses a list dialog</string>
     <string name="dialog_title_list_preference">Choose one</string>
     
-<string name="textflinger_button_title">Fling text</string>
+	<string name="textflinger_button_title">Fling text</string>
+	
+	
+	
+    <string name="widget_loading">Loading...</string>
+    <string name="widget_icon_title">Blank Monitor</string>
+    
 </resources>
