--- a/wiki/SetupGuideForUbuntuOneiric.wiki
+++ b/wiki/SetupGuideForUbuntuOneiric.wiki
@@ -1,7 +1,7 @@
 #summary Setup Guide for Ubuntu Oneiric / Linux Mint 12
 
 = Installation =
-I use a specific revision of the [https://sourceforge.net/apps/trac/pyusb/ PyUSB wrapper]: *1.0.0-alpha-0*
+The firecracker control code is compatible only with a specific version of the [https://sourceforge.net/apps/trac/pyusb/ PyUSB wrapper]: *1.0.0-alpha-0*
 
 = Firewall Configuration =
 I like to use the Firestarter GUI firewall configuration application for Ubuntu, since it provides real-time feedback when a connection is rejected by the firewall.
