--- a/wiki/SetupGuideForUbuntuOneiric.wiki
+++ b/wiki/SetupGuideForUbuntuOneiric.wiki
@@ -3,6 +3,18 @@
 = Installation =
 The firecracker control code is compatible only with a specific version of the [https://sourceforge.net/apps/trac/pyusb/ PyUSB wrapper]: *1.0.0-alpha-0*
 
+== Packaging and installing the server application ==
+
+`sudo apt-get install cdbs devscripts subversion`
+
+`svn checkout https://androbuntu.googlecode.com/svn/trunk androbuntu`
+
+`./make_binary_packages.sh`
+
+`sudo apt-get install bottlerocket`
+
+`ubudroid-server`
+
 = Firewall Configuration =
 I like to use the Firestarter GUI firewall configuration application for Ubuntu, since it provides real-time feedback when a connection is rejected by the firewall.
 
