--- a/wiki/WebcamMonitoring.wiki
+++ b/wiki/WebcamMonitoring.wiki
@@ -23,3 +23,7 @@ To change the tilt, for example, I run
 `uvcdynctrl --set="Tilt (relative)" 100`
 
 The command spits out some warning messages, which you can ignore.
+
+To tilt in the opposite direction:
+
+`uvcdynctrl --set="Tilt (relative)" -- -100`
