--- a/wiki/WebcamMonitoring.wiki
+++ b/wiki/WebcamMonitoring.wiki
@@ -18,16 +18,17 @@ to see whether those functions were supported. They were not. So I ran
 
 The `--clist` option thereafter showed support for Pan/Tilt and LED control.
 
-To change the tilt, for example, I run
+== Pan/Tilt Control ==
+Tilt down:
 
 `uvcdynctrl --device=video1 --set="Tilt (relative)" 100`
+
+To tilt in the opposite direction:
+
+`uvcdynctrl --device=video1 --set="Tilt (relative)" -- -100`
 
 == LED Control ==
   * *OFF* `uvcdynctrl --device=video1 --set="LED1 Mode" 0`
   * *ON* `uvcdynctrl --device=video1 --set="LED1 Mode" 1`
   * *BLINKING* `uvcdynctrl --device=video1 --set="LED1 Mode" 2`
 The command spits out some warning messages, which you can ignore.
-
-To tilt in the opposite direction:
-
-`uvcdynctrl --device=video1 --set="Tilt (relative)" -- -100`
