--- a/wiki/WebcamMonitoring.wiki
+++ b/wiki/WebcamMonitoring.wiki
@@ -50,4 +50,4 @@ To retrieve Zoneminder info about your webcam:
 `gst-launch v4l2src device=/dev/video0 ! 'video/x-raw-yuv,width=640,height=480,framerate=30/1' ! ffmpegcolorspace ! videoscale ! ffenc_h263 ! video/x-h263 ! rtph263ppay pt=96 ! udpsink host=localhost port=5000 sync=false`
 
 == Sink command ==
-gst-launch udpsrc port=5000 ! application/x-rtp, clock-rate=90000,payload=96,encoding-name=H263-2000 ! rtph263pdepay queue-delay=0 ! ffdec_h263 ! xvimagesink
+`gst-launch udpsrc port=5000 ! application/x-rtp, clock-rate=90000,payload=96,encoding-name=H263-2000 ! rtph263pdepay queue-delay=0 ! ffdec_h263 ! xvimagesink`
