--- a/wiki/TemperatureSensor.wiki
+++ b/wiki/TemperatureSensor.wiki
@@ -5,4 +5,4 @@ http://www.eanderalx.org/blog:linux:hid_temper_pc_sensor
 
 http://blog.svilen.com/
 
-After adding the rules.d file, unplug and re-plug the USB sensor.
+After adding the rules.d file, unplug and re-plug the USB sensor. Then you should be able to run it without requiring `sudo`.
