Add VLC telnet functions, rewrite server with HTTP and JSON

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="title_edittext_preference">Server address</string>
     <string name="summary_edittext_preference">Set hostname or IP address</string>
     <string name="dialog_title_edittext_preference">Enter hostname or IP address</string>
-    <string name="default_hostname_string">192.168.0.80</string>
+    <string name="default_hostname_string">192.168.1.17</string>
     
     <string name="default_mac_address_string">90:e6:ba:5d:16:4e</string>
     <string name="dialog_title_mac_address_preference">Enter MAC address</string>
@@ -33,7 +33,7 @@
 	<string name="textflinger_button_title">Fling text</string>
 	
 	
-	<string name="default_trigger_wifi_network">our_house</string>
+	<string name="default_trigger_wifi_network">shiznet</string>
 	
     <string name="widget_loading">Loading...</string>
     <string name="widget_icon_title">Blank Monitor</string>
